--- a/src/app/components/info-order/info-order.component.html
+++ b/src/app/components/info-order/info-order.component.html
@@ -34,10 +34,11 @@
               </div>
             </div>
             <div class="form-group row mr-15">
-            <input class="form-control" placeholder="Phone number" rows="3"
-                      formControlName="address" required [ngClass]="{ 'is-invalid': addressValid}"/>
-              <div *ngIf="addressValid" class="invalid-feedback mr-b-15">
-                <div *ngIf="address.errors.required">Phone number is required</div>
+            <input class="form-control" placeholder="Phone number"
+                      formControlName="phone" required [ngClass]="{ 'is-invalid': phoneValid}"/>
+              <div *ngIf="phoneValid" class="invalid-feedback mr-b-15">
+                <div *ngIf="phone.errors.required">Phone number is required</div>
+                <div *ngIf="phone.errors.pattern">Phone number is invalid</div>
               </div>
             </div>
 
